fix: correct cookie check logic and improve mobile layout overflow handling

--- a/src/_Components/Header/headerMobile/HeaderMenuMobile.module.css
+++ b/src/_Components/Header/headerMobile/HeaderMenuMobile.module.css
@@ -10,6 +10,7 @@
   z-index: 999;
   transition: 0.5s;
   min-width: 400px;
+  overflow:hidden
   /* width: 100%; */
 }
 
